BJS2-78211 refactor tests