@@ -10,10 +10,6 @@ import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 import school.faang.user_service.config.context.UserContext;
-import school.faang.user_service.dto.goal.GoalCreateRequestDto;
-import school.faang.user_service.dto.goal.GoalFilterDto;
-import school.faang.user_service.dto.goal.GoalResponseDto;
-import school.faang.user_service.dto.goal.GoalUpdateRequestDto;
 import school.faang.user_service.entity.Skill;
 import school.faang.user_service.entity.User;
 import school.faang.user_service.entity.goal.Goal;
@@ -23,24 +19,27 @@ import school.faang.user_service.exception.goal.GoalAlreadyCompletedException;
 import school.faang.user_service.exception.goal.GoalNotFoundException;
 import school.faang.user_service.exception.skill.SkillNotFoundException;
 import school.faang.user_service.exception.user.UserNotFoundException;
-import school.faang.user_service.mapper.goal.GoalMapperImpl;
+import school.faang.user_service.model.GoalFilter;
 import school.faang.user_service.repository.goal.GoalRepository;
 import school.faang.user_service.service.skill.SkillService;
 import school.faang.user_service.service.user.UserService;
+import school.faang.user_service.validator.goal.GoalValidator;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Stream;
 
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.longThat;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -55,277 +54,284 @@ public class GoalServiceTest {
     private UserService userService;
     @Mock
     private SkillService skillService;
-    @Spy
-    private GoalMapperImpl goalMapper;
     @Mock
     private UserContext userContext;
+    @Spy
+    private GoalValidator goalValidator;
     @Captor
     private ArgumentCaptor<Goal> goalCaptor;
     @InjectMocks
     private GoalService goalService;
-
-    private GoalCreateRequestDto goalCreateRequestDto;
-
-    private GoalUpdateRequestDto goalUpdateRequestDto;
+    private Goal goal;
+    private Long parentId;
+    private List<Long> skillIds;
+    private long userId;
+    private int countActiveGoalsPerUser;
 
     @BeforeEach
     void setUp() {
-        String title = "Test Goal";
-        String description = "Test description";
-        List<Long> skillIds = List.of(1L);
-
-        goalCreateRequestDto = new GoalCreateRequestDto();
-        goalCreateRequestDto.setTitle(title);
-        goalCreateRequestDto.setDescription(description);
-        goalCreateRequestDto.setSkillIds(skillIds);
-
-        goalUpdateRequestDto = new GoalUpdateRequestDto();
-        goalUpdateRequestDto.setTitle("Test Goal");
-        goalUpdateRequestDto.setDescription("Test description");
-        goalUpdateRequestDto.setSkillIds(skillIds);
-        goalUpdateRequestDto.setStatus(GoalStatus.ACTIVE);
+        goal = new Goal();
+        goal.setTitle("Test Goal");
+        goal.setDescription("Test description");
+        goal.setStatus(GoalStatus.ACTIVE);
+        parentId = 2L;
+        skillIds = List.of(3L, 4L, 5L);
+        userId = 1L;
+        countActiveGoalsPerUser = 3;
     }
 
+    @Test
+    public void testGetGoalByIdOrThrow_successfully() {
+        goal.setId(12L);
+
+        when(goalRepository.findById(goal.getId())).thenReturn(Optional.of(goal));
+
+        Goal returnGoal = goalService.getGoalByIdOrThrow(goal.getId());
+
+        verify(goalRepository, times(1)).findById(goal.getId());
+        assertEquals(goal, returnGoal);
+    }
+
+    @Test
+    public void testGetGoalByIdOrThrow_goalNotFound() {
+        goal.setId(12L);
+
+        when(goalRepository.findById(goal.getId())).thenReturn(Optional.empty());
+
+        assertThrows(GoalNotFoundException.class, () -> goalService.getGoalByIdOrThrow(goal.getId()));
+        verify(goalRepository, times(1)).findById(goal.getId());
+    }
 
     @Test
     public void testCreateGoal_savesGoalNonParent() {
-        Goal goal = goalMapper.toGoalEntity(goalCreateRequestDto);
-        long goalId = 10L;
-        long userId = 1L;
-        User mockUser = new User();
-        mockUser.setId(userId);
-        goal.setId(goalId);
-        goal.setUsers(List.of(mockUser));
-        int countActiveGoalsPerUser = 3;
-        long skillId = goalCreateRequestDto.getSkillIds().get(0);
-        Skill skill = new Skill();
-        skill.setId(skillId);
-
+        long goalId = 12L;
 
         when(userContext.getUserId()).thenReturn(userId);
         when(goalRepository.countActiveGoalsPerUser(userId)).thenReturn(countActiveGoalsPerUser);
-        when(skillService.getSkillByIdOrThrow(skillId)).thenReturn(skill);
-        when(userService.getUserByIdOrThrow(userId)).thenReturn(mockUser);
-        when(goalRepository.save(any(Goal.class))).thenReturn(goal);
+        when(userService.getUserByIdOrThrow(eq(userId)))
+                .thenAnswer(invocation -> {
+                    Long userId = invocation.getArgument(0);
+                    User user = new User();
+                    user.setId(userId);
+                    return user;
+                });
+        when(skillService.getSkillByIdOrThrow(longThat(skillId -> skillIds.contains(skillId))))
+                .thenAnswer(invocation -> {
+                    Long skillId = invocation.getArgument(0);
+                    Skill skill = new Skill();
+                    skill.setId(skillId);
+                    return skill;
+                });
+        when(goalRepository.save(any(Goal.class))).thenAnswer(invocation -> {
+            Goal savedGoal = invocation.getArgument(0);
+            savedGoal.setId(goalId);
+            return savedGoal;
+        });
 
-        GoalResponseDto goalResponseDto = goalService.createGoal(goalCreateRequestDto);
+        Goal returnGoal = goalService.createGoal(goal, null, skillIds);
 
+
+        verify(goalRepository, never()).findById(any());
         verify(goalRepository, times(1)).save(goalCaptor.capture());
-        verify(goalRepository, never()).findById(any(Long.class));
-        assertEquals(goalId, goalResponseDto.getId());
-        assertNull(goalResponseDto.getParentId());
-        assertEquals(goalCreateRequestDto.getTitle(), goalResponseDto.getTitle());
-        assertEquals(goalCreateRequestDto.getDescription(), goalResponseDto.getDescription());
-        assertEquals(GoalStatus.ACTIVE, goalCaptor.getValue().getStatus());
-        assertEquals(List.of(userId), goalResponseDto.getUsersIds());
+        Goal saveGoal = goalCaptor.getValue();
+        assertEquals(goalId, saveGoal.getId());
+        assertNull(saveGoal.getParent());
+        assertEquals(goal.getTitle(), saveGoal.getTitle());
+        assertEquals(goal.getDescription(), saveGoal.getDescription());
+        assertEquals(GoalStatus.ACTIVE, saveGoal.getStatus());
+        assertTrue(saveGoal.getUsers().stream()
+                .anyMatch(user -> user.getId().equals(userId)));
+        assertTrue(saveGoal.getSkillsToAchieve().stream()
+                .map(Skill::getId)
+                .toList()
+                .containsAll(skillIds));
+        assertEquals(saveGoal, returnGoal);
     }
 
     @Test
     public void testCreateGoal_savesGoalWithParent() {
-        Goal goal = goalMapper.toGoalEntity(goalCreateRequestDto);
-        long goalId = 10L;
-        long userId = 1L;
-        User mockUser = new User();
-        mockUser.setId(userId);
-        goal.setId(goalId);
-        goal.setUsers(List.of(mockUser));
-        int countActiveGoalsPerUser = 3;
-        long skillId = goalCreateRequestDto.getSkillIds().get(0);
-        Skill skill = new Skill();
-        skill.setId(skillId);
-        long goalParentId = 5L;
-        goalCreateRequestDto.setParentId(goalParentId);
-        Goal parentGoal = new Goal();
-        parentGoal.setId(goalParentId);
-        goal.setParent(parentGoal);
+        long goalId = 12L;
 
         when(userContext.getUserId()).thenReturn(userId);
         when(goalRepository.countActiveGoalsPerUser(userId)).thenReturn(countActiveGoalsPerUser);
-        when(skillService.getSkillByIdOrThrow(skillId)).thenReturn(skill);
-        when(userService.getUserByIdOrThrow(userId)).thenReturn(mockUser);
-        when(goalRepository.findById(goalCreateRequestDto.getParentId())).thenReturn(Optional.of(parentGoal));
-        when(goalRepository.save(any(Goal.class))).thenReturn(goal);
+        when(userService.getUserByIdOrThrow(eq(userId)))
+                .thenAnswer(invocation -> {
+                    Long userId = invocation.getArgument(0);
+                    User user = new User();
+                    user.setId(userId);
+                    return user;
+                });
+        when(goalRepository.findById(eq(parentId)))
+                .thenAnswer(invocation -> {
+                    Long goalParentId = invocation.getArgument(0);
+                    Goal parentGoal = new Goal();
+                    parentGoal.setId(goalParentId);
+                    return Optional.of(parentGoal);
+                });
+        when(skillService.getSkillByIdOrThrow(longThat(skillId -> skillIds.contains(skillId))))
+                .thenAnswer(invocation -> {
+                    Long skillId = invocation.getArgument(0);
+                    Skill skill = new Skill();
+                    skill.setId(skillId);
+                    return skill;
+                });
+        when(goalRepository.save(any(Goal.class))).thenAnswer(invocation -> {
+            Goal savedGoal = invocation.getArgument(0);
+            savedGoal.setId(goalId);
+            return savedGoal;
+        });
 
-        GoalResponseDto goalResponseDto = goalService.createGoal(goalCreateRequestDto);
+        Goal returnGoal = goalService.createGoal(goal, parentId, skillIds);
 
+        verify(goalRepository, times(1)).findById(eq(parentId));
         verify(goalRepository, times(1)).save(goalCaptor.capture());
-        verify(goalRepository, times(1)).findById(eq(goalParentId));
-        assertEquals(goalId, goalResponseDto.getId());
-        assertEquals(goalParentId, goalResponseDto.getParentId());
-        assertEquals(goalCreateRequestDto.getTitle(), goalResponseDto.getTitle());
-        assertEquals(goalCreateRequestDto.getDescription(), goalResponseDto.getDescription());
-        assertEquals(GoalStatus.ACTIVE, goalCaptor.getValue().getStatus());
-        assertEquals(List.of(userId), goalResponseDto.getUsersIds());
+        Goal saveGoal = goalCaptor.getValue();
+        assertEquals(goalId, saveGoal.getId());
+        assertEquals(parentId, saveGoal.getParent().getId());
+        assertEquals(goal.getTitle(), saveGoal.getTitle());
+        assertEquals(goal.getDescription(), saveGoal.getDescription());
+        assertEquals(GoalStatus.ACTIVE, saveGoal.getStatus());
+        assertTrue(saveGoal.getUsers().stream()
+                .anyMatch(user -> Objects.equals(user.getId(), userId)));
+        assertTrue(saveGoal.getSkillsToAchieve().stream()
+                .map(Skill::getId)
+                .toList()
+                .containsAll(skillIds));
+        assertEquals(saveGoal, returnGoal);
     }
 
     @Test
     public void testCreateGoal_countActiveGoalMoreMax() {
-        long userId = 1L;
-        int countActiveGoalsPerUser = 4;
+        countActiveGoalsPerUser = 4;
 
         when(userContext.getUserId()).thenReturn(userId);
         when(goalRepository.countActiveGoalsPerUser(userId)).thenReturn(countActiveGoalsPerUser);
 
-        assertThrows(CountActiveGoalMoreMaxException.class, () -> goalService.createGoal(goalCreateRequestDto));
-        verify(goalRepository, never()).save(goalCaptor.capture());
-    }
-
-    @Test
-    public void testCreateGoal_nonExistingSkill() {
-        goalCreateRequestDto.setSkillIds(Arrays.asList(12L, 15L));
-        long userId = 1L;
-        int countActiveGoalsPerUser = 3;
-        long skillId = goalCreateRequestDto.getSkillIds().get(0);
-
-        when(userContext.getUserId()).thenReturn(userId);
-        when(goalRepository.countActiveGoalsPerUser(userId)).thenReturn(countActiveGoalsPerUser);
-        when(skillService.getSkillByIdOrThrow(skillId)).thenThrow(SkillNotFoundException.class);
-
-        assertThrows(SkillNotFoundException.class, () -> goalService.createGoal(goalCreateRequestDto));
+        assertThrows(CountActiveGoalMoreMaxException.class, () -> goalService.createGoal(goal, parentId, skillIds));
         verify(goalRepository, never()).save(goalCaptor.capture());
     }
 
     @Test
     public void testCreateGoal_nonExistingOwner() {
-        goalCreateRequestDto.setParentId(2L);
-        long userId = 1L;
-        int countActiveGoalsPerUser = 3;
-        long skillId = goalCreateRequestDto.getSkillIds().get(0);
-        Skill skill = new Skill();
-        skill.setId(skillId);
-
         when(userContext.getUserId()).thenReturn(userId);
         when(goalRepository.countActiveGoalsPerUser(userId)).thenReturn(countActiveGoalsPerUser);
-        when(skillService.getSkillByIdOrThrow(skillId)).thenReturn(skill);
         when(userService.getUserByIdOrThrow(userId)).thenThrow(UserNotFoundException.class);
 
-        assertThrows(UserNotFoundException.class, () -> goalService.createGoal(goalCreateRequestDto));
+        assertThrows(UserNotFoundException.class, () -> goalService.createGoal(goal, parentId, skillIds));
         verify(goalRepository, never()).save(goalCaptor.capture());
     }
 
     @Test
     public void testCreateGoal_nonExistingParentGoal() {
-        goalCreateRequestDto.setParentId(2L);
-        long userId = 1L;
-        int countActiveGoalsPerUser = 3;
-        long skillId = goalCreateRequestDto.getSkillIds().get(0);
-        Skill skill = new Skill();
-        skill.setId(skillId);
-        User mockUser = new User();
-        mockUser.setId(userId);
-        long goalParentId = 5L;
-        goalCreateRequestDto.setParentId(goalParentId);
-
         when(userContext.getUserId()).thenReturn(userId);
         when(goalRepository.countActiveGoalsPerUser(userId)).thenReturn(countActiveGoalsPerUser);
-        when(skillService.getSkillByIdOrThrow(skillId)).thenReturn(skill);
-        when(userService.getUserByIdOrThrow(userId)).thenReturn(mockUser);
-        when(goalRepository.findById(goalParentId)).thenThrow(GoalNotFoundException.class);
+        when(userService.getUserByIdOrThrow(userId)).thenReturn(mock(User.class));
+        when(goalRepository.findById(parentId)).thenReturn(Optional.empty());
 
-        assertThrows(GoalNotFoundException.class, () -> goalService.createGoal(goalCreateRequestDto));
+        assertThrows(GoalNotFoundException.class, () -> goalService.createGoal(goal, parentId, skillIds));
         verify(goalRepository, never()).save(goalCaptor.capture());
-        verify(goalRepository, times(1)).findById(eq(goalParentId));
+        verify(goalRepository, times(1)).findById(eq(parentId));
+    }
+
+    @Test
+    public void testCreateGoal_nonExistingSkill() {
+        when(userContext.getUserId()).thenReturn(userId);
+        when(goalRepository.countActiveGoalsPerUser(userId)).thenReturn(countActiveGoalsPerUser);
+        when(userService.getUserByIdOrThrow(userId)).thenReturn(mock(User.class));
+        when(goalRepository.findById(parentId)).thenReturn(Optional.of(mock(Goal.class)));
+        when(skillService.getSkillByIdOrThrow(longThat(skillId -> skillIds.contains(skillId))))
+                .thenThrow(SkillNotFoundException.class);
+
+        assertThrows(SkillNotFoundException.class, () -> goalService.createGoal(goal, parentId, skillIds));
+        verify(goalRepository, never()).save(goalCaptor.capture());
     }
 
     @Test
     public void testUpdateGoal_savesGoalActive() {
-        long goalId = 1L;
-        goalUpdateRequestDto.setId(goalId);
+        long goalId = 12L;
 
-        Goal saveGoal = goalMapper.toGoalEntity(goalUpdateRequestDto);
-        saveGoal.setSkillsToAchieve(Collections.emptyList());
-        saveGoal.setUsers(Collections.emptyList());
-        saveGoal.setInvitations(Collections.emptyList());
+        when(skillService.getSkillByIdOrThrow(longThat(skillId -> skillIds.contains(skillId))))
+                .thenAnswer(invocation -> {
+                    Long skillId = invocation.getArgument(0);
+                    Skill skill = new Skill();
+                    skill.setId(skillId);
+                    return skill;
+                });
+        when(goalRepository.save(any(Goal.class))).thenAnswer(invocation -> {
+            Goal savedGoal = invocation.getArgument(0);
+            savedGoal.setId(goalId);
+            User owner = new User();
+            owner.setId(userId);
+            savedGoal.setUsers(List.of(owner));
+            return savedGoal;
+        });
 
-        Skill mockSkill = new Skill();
-        mockSkill.setId(1L);
-
-        when(skillService.getSkillByIdOrThrow(goalUpdateRequestDto.getSkillIds().get(0)))
-                .thenReturn(mockSkill);
-        Goal goal = goalMapper.toGoalEntity(goalUpdateRequestDto);
-        when(goalRepository.findById(goalId)).thenReturn(Optional.of(goal));
-        when(goalRepository.save(any())).thenReturn(saveGoal);
-
-        GoalResponseDto goalResponseDto = goalService.updateGoal(goalUpdateRequestDto);
+        Goal returnGoal = goalService.updateGoal(goal, skillIds);
 
         verify(goalRepository, times(1)).save(goalCaptor.capture());
+        Goal saveGoal = goalCaptor.getValue();
         verify(skillService, never()).assignSkillsToUsers(any(), any());
-        assertEquals(goalId, goalResponseDto.getId());
-        assertEquals(goalUpdateRequestDto.getTitle(), goalResponseDto.getTitle());
-        assertEquals(goalUpdateRequestDto.getDescription(), goalResponseDto.getDescription());
-        assertEquals(goalUpdateRequestDto.getStatus(), goalResponseDto.getStatus());
+        assertEquals(goalId, saveGoal.getId());
+        assertEquals(goal.getTitle(), saveGoal.getTitle());
+        assertEquals(goal.getDescription(), saveGoal.getDescription());
+        assertEquals(goal.getStatus(), saveGoal.getStatus());
+        assertTrue(saveGoal.getSkillsToAchieve().stream()
+                .map(Skill::getId)
+                .toList()
+                .containsAll(skillIds));
+        assertEquals(saveGoal, returnGoal);
     }
 
-    //TODO: не нужно when(goalRepository.findById(goalId)).thenReturn(Optional.of(goal)), это не верно
     @Test
     public void testUpdateGoal_savesGoalCompleted() {
-        long goalId = 1L;
-        goalUpdateRequestDto.setId(goalId);
-
-        Goal saveGoal = goalMapper.toGoalEntity(goalUpdateRequestDto);
-        saveGoal.setSkillsToAchieve(new ArrayList<>());
-        saveGoal.setUsers(new ArrayList<>());
-        saveGoal.setInvitations(new ArrayList<>());
-        saveGoal.setStatus(GoalStatus.COMPLETED);
-
-        Skill mockSkill = new Skill();
-        mockSkill.setId(1L);
-
-        when(skillService.getSkillByIdOrThrow(goalUpdateRequestDto.getSkillIds().get(0)))
-                .thenReturn(mockSkill);
-        Goal goal = goalMapper.toGoalEntity(goalUpdateRequestDto);
-        when(goalRepository.findById(goalId)).thenReturn(Optional.of(goal));
-        when(goalRepository.save(any())).thenReturn(saveGoal);
-
-        GoalResponseDto goalResponseDto = goalService.updateGoal(goalUpdateRequestDto);
-
-        verify(goalRepository, times(1)).save(goalCaptor.capture());
-        verify(skillService).assignSkillsToUsers(any(), any());
-        assertEquals(goalId, goalResponseDto.getId());
-        assertEquals(goalUpdateRequestDto.getTitle(), goalResponseDto.getTitle());
-        assertEquals(goalUpdateRequestDto.getDescription(), goalResponseDto.getDescription());
-//        assertEquals(goalUpdateRequestDto.getStatus(), goalResponseDto.getStatus());
-    }
-
-    @Test
-    public void testUpdateGoal_goalNotFound() {
-        long goalId = 1L;
-        goalUpdateRequestDto.setId(goalId);
-        when(goalRepository.findById(goalId)).thenReturn(Optional.empty());
-
-        assertThrows(GoalNotFoundException.class, () -> goalService.updateGoal(goalUpdateRequestDto));
-        verify(goalRepository, never()).save(goalCaptor.capture());
-        verify(skillService, never()).assignSkillsToUsers(any(), any());
-    }
-
-    @Test
-    public void testUpdateGoal_goalAlreadyCompleted() {
-        long goalId = 1L;
-        goalUpdateRequestDto.setId(goalId);
-        Goal goal = new Goal();
-        goal.setId(goalId);
+        long goalId = 12L;
         goal.setStatus(GoalStatus.COMPLETED);
 
-        when(goalRepository.findById(goalId)).thenReturn(Optional.of(goal));
+        when(skillService.getSkillByIdOrThrow(longThat(skillId -> skillIds.contains(skillId))))
+                .thenAnswer(invocation -> {
+                    Long skillId = invocation.getArgument(0);
+                    Skill skill = new Skill();
+                    skill.setId(skillId);
+                    return skill;
+                });
+        when(goalRepository.save(any(Goal.class))).thenAnswer(invocation -> {
+            Goal savedGoal = invocation.getArgument(0);
+            savedGoal.setId(goalId);
+            User owner = new User();
+            owner.setId(userId);
+            savedGoal.setUsers(List.of(owner));
+            return savedGoal;
+        });
 
-        assertThrows(GoalAlreadyCompletedException.class, () -> goalService.updateGoal(goalUpdateRequestDto));
-        verify(goalRepository, never()).save(goalCaptor.capture());
-        verify(skillService, never()).assignSkillsToUsers(any(), any());
+        Goal returnGoal = goalService.updateGoal(goal, skillIds);
+
+        verify(goalRepository, times(1)).save(goalCaptor.capture());
+        Goal saveGoal = goalCaptor.getValue();
+        verify(skillService, times(1))
+                .assignSkillsToUsers(
+                        eq(skillIds),
+                        argThat(userIds -> userIds.containsAll(
+                                saveGoal.getUsers().stream()
+                                        .map(User::getId)
+                                        .toList()
+                        )));
+        assertEquals(goalId, saveGoal.getId());
+        assertEquals(goal.getTitle(), saveGoal.getTitle());
+        assertEquals(goal.getDescription(), saveGoal.getDescription());
+        assertEquals(goal.getStatus(), saveGoal.getStatus());
+        assertTrue(saveGoal.getSkillsToAchieve().stream()
+                .map(Skill::getId)
+                .toList()
+                .containsAll(skillIds));
+        assertEquals(saveGoal, returnGoal);
     }
 
     @Test
     public void testUpdateGoal_nonExistingSkill() {
-        long goalId = 1L;
-        goalUpdateRequestDto.setId(goalId);
-        goalUpdateRequestDto.setSkillIds(Arrays.asList(12L, 15L));
-
-        Goal goal = goalMapper.toGoalEntity(goalUpdateRequestDto);
-        when(goalRepository.findById(goalId)).thenReturn(Optional.of(goal));
-
-        when(skillService.getSkillByIdOrThrow(goalUpdateRequestDto.getSkillIds().get(0)))
+        when(skillService.getSkillByIdOrThrow(longThat(skillId -> skillIds.contains(skillId))))
                 .thenThrow(SkillNotFoundException.class);
 
-        assertThrows(SkillNotFoundException.class, () -> goalService.updateGoal(goalUpdateRequestDto));
+        assertThrows(SkillNotFoundException.class, () -> goalService.updateGoal(goal, skillIds));
         verify(goalRepository, never()).save(goalCaptor.capture());
         verify(skillService, never()).assignSkillsToUsers(any(), any());
     }
@@ -337,8 +343,7 @@ public class GoalServiceTest {
         goal.setId(goalId);
         when(goalRepository.findById(goalId)).thenReturn(Optional.of(goal));
 
-        goalService.deleteGoalById(goalId);
-
+        assertDoesNotThrow(() -> goalService.deleteGoalById(goalId));
         verify(goalRepository, times(1)).deleteById(goalId);
     }
 
@@ -353,62 +358,59 @@ public class GoalServiceTest {
 
     @Test
     public void testGetSubtasksByParentGoalId() {
-        long goalParentId = 1L;
-        long goalId = 3L;
-        Goal goal = new Goal();
-        goal.setId(goalId);
-        Goal goalParent = new Goal();
-        goalParent.setId(goalParentId);
-        goal.setParent(goalParent);
-        GoalResponseDto goalResponseDto = goalMapper.toGoalResponseDto(goal);
+        when(goalRepository.findByParent(parentId)).thenReturn(Stream.of(goal));
 
-        when(goalRepository.findByParent(goalParentId)).thenReturn(Stream.of(goal));
+        List<Goal> goalsChild = goalService.getSubtasksByParentGoalId(parentId);
 
-        List<GoalResponseDto> goalsChild = goalService.getSubtasksByParentGoalId(goalParentId);
-
-        verify(goalRepository, times(1)).findByParent(goalParentId);
-        assertTrue(goalsChild.contains(goalResponseDto));
+        verify(goalRepository, times(1)).findByParent(parentId);
+        assertTrue(goalsChild.contains(goal));
     }
 
     @Test
     public void testGetGoalsByUserAndFilter() {
-        long userId = 1L;
-        long goalId = 3L;
-        Goal goal = new Goal();
-        goal.setId(goalId);
-        goal.setTitle("Title");
-        goal.setStatus(GoalStatus.COMPLETED);
-        GoalFilterDto filter = new GoalFilterDto(goal.getTitle(), goal.getStatus());
-        GoalResponseDto goalResponseDto = goalMapper.toGoalResponseDto(goal);
+        GoalFilter filter = new GoalFilter(goal.getTitle(), goal.getStatus());
 
         when(userContext.getUserId()).thenReturn(userId);
         when(goalRepository.findGoalsByUserId(userId)).thenReturn(Stream.of(goal));
 
-        List<GoalResponseDto> filterGoals = goalService.getGoalsByUserAndFilter(filter);
+        List<Goal> filterGoals = goalService.getGoalsByUserAndFilter(filter);
 
         verify(goalRepository, times(1)).findGoalsByUserId(userId);
-        assertTrue(filterGoals.contains(goalResponseDto));
+        assertTrue(filterGoals.contains(goal));
     }
 
     @Test
-    public void testGetGoalByIdOrThrow_successfully() {
-        long goalId = 5L;
-        Goal goal = new Goal();
-        goal.setId(goalId);
-        when(goalRepository.findById(goalId)).thenReturn(Optional.of(goal));
+    public void testGetGoalByIdIfActiveElseThrow_successfully() {
+        goal.setId(12L);
 
-        Goal returnGoal = goalService.getGoalByIdOrThrow(goalId);
+        when(goalRepository.findById(goal.getId())).thenReturn(Optional.of(goal));
 
-        verify(goalRepository, times(1)).findById(goalId);
-        assertEquals(goal.getId(), returnGoal.getId());
+        Goal returnGoal = goalService.getGoalByIdIfActiveElseThrow(goal.getId());
+
+        verify(goalRepository, times(1)).findById(goal.getId());
+        assertEquals(goal, returnGoal);
     }
 
     @Test
-    public void testGetGoalByIdOrThrow_goalNotFound() {
-        long goalId = 5L;
-        when(goalRepository.findById(goalId)).thenReturn(Optional.empty());
+    public void testGetGoalByIdIfActiveElseThrow_goalNotFound() {
+        goal.setId(12L);
 
-        assertThrows(GoalNotFoundException.class, () -> goalService.getGoalByIdOrThrow(goalId));
-        verify(goalRepository, times(1)).findById(goalId);
+        when(goalRepository.findById(goal.getId())).thenReturn(Optional.empty());
+
+        assertThrows(GoalNotFoundException.class,
+                () -> goalService.getGoalByIdIfActiveElseThrow(goal.getId()));
+        verify(goalRepository, times(1)).findById(goal.getId());
+    }
+
+    @Test
+    public void testGetGoalByIdIfActiveElseThrow_goalAlreadyCompleted() {
+        goal.setId(12L);
+        goal.setStatus(GoalStatus.COMPLETED);
+
+        when(goalRepository.findById(goal.getId())).thenReturn(Optional.of(goal));
+
+        assertThrows(GoalAlreadyCompletedException.class,
+                () -> goalService.getGoalByIdIfActiveElseThrow(goal.getId()));
+        verify(goalRepository, times(1)).findById(goal.getId());
     }
 }
